--- a/corprules.in
+++ b/corprules.in
@@ -2487,7 +2487,7 @@ HACK_VERBING		revolutionising
 HACK_VERBING		distributing
 HACK_VERBING		auto-generating
 HACK_VERBING		automating
-HACK_VERBING		making autonomous
+#HACK_VERBING		making autonomous
 HACK_VERBING		instrumenting
 HACK_VERBING		interposing on
 HACK_VERBING		monitoring
@@ -2752,7 +2752,7 @@ EXP_TYPE_UM photon
 EXP_TYPE_UM particle
 EXP_TYPE_UM equation
 EXP_TYPE_UM theorem
-EXP_TYPE_UM pixel 
+EXP_TYPE_UM pixel
 EXP_TYPE_UM PREFIXXNSUF
 
 EXP_WHERE_UM	testbed
@@ -2779,6 +2779,13 @@ EXP_WHERE_CMN	doodad
 EXP_WHERE_CMN	thingamibob
 EXP_WHERE_CMN	gameboy
 EXP_WHERE_CMN	whatnot
+EXP_WHERE_CMN	whatsit
+EXP_WHERE_CMN	thingy
+EXP_WHERE_CMN	apparatus
+EXP_WHERE_CMN	gadget
+EXP_WHERE_CMN	instrument
+EXP_WHERE_CMN	implement
+EXP_WHERE_CMN	gismo
 
 #EXP_WHERE_CMN	corporation
 #EXP_WHERE_CMN	institute
@@ -3125,6 +3132,13 @@ EXPANSION_ITEM		laser label printer
 EXPANSION_ITEM		dot-matrix printer
 EXPANSION_ITEM		5.25" floppy drive
 EXPANSION_ITEM		OLD_MACHINE
+EXPANSION_ITEM		Nintendo 64
+EXPANSION_ITEM		Super-nintendo
+EXPANSION_ITEM		Sega Superdrive
+EXPANSION_ITEM		Xbox 360
+EXPANSION_ITEM		PS4
+EXPANSION_ITEM		Power Mackintosh G3
+EXPANSION_ITEM		Atari
 
 BANDWIDTH_AMOUNT	EVAL_MOD_N MB/s
 BANDWIDTH_AMOUNT	EVAL_MOD_N kB/s
@@ -5157,14 +5171,17 @@ SCI_ADJ_ADV+20	increasingly
 SCI_ADJ_ADV	wankingly
 SCI_ADJ_ADV SCI_MATH_ADV
 SCI_ADJ_ADV+20 COMP_ADV
-SCI_ADJ_ADV+10 very
+#SCI_ADJ_ADV+10 very
 SCI_ADJ_ADV+10 highly
 SCI_ADJ_ADV+10 inconsequentially
 SCI_ADJ_ADV+10 wonderfully
-SCI_ADJ_ADV+10 meekly
-SCI_ADJ_ADV+10 dutifully
-SCI_ADJ_ADV+10 submissively
-SCI_ADJ_ADV+10 bashfully
+SCI_ADJ_ADV+5 meekly
+SCI_ADJ_ADV+5 dutifully
+SCI_ADJ_ADV+5 submissively
+SCI_ADJ_ADV+5 bashfully
+SCI_ADJ_ADV+10 appallingly
+SCI_ADJ_ADV+5 ludicrously
+SCI_ADJ_ADV+5 shamefully
 
 SCI_ADV	ostensibly
 SCI_ADV	obviously
@@ -7135,6 +7152,7 @@ TEAM officers
 TEAM poindexters
 TEAM labrats
 TEAM lawyers
+TEAM bread-winners
 
 
 LAB_IMAGE_MAYBE+10
@@ -7211,6 +7229,7 @@ LABRATS Bothans
 SCI_SCI_CAPTION KEYTHE SCIENCE, happening in THE_WILD. SCI_SUF
 SCI_SCI_CAPTION KEYTHE SCIENCE, happening as we speak. SCI_SUF
 SCI_SCI_CAPTION KEYTHE SCIENCE, happening tooth and nail. SCI_SUF
+SCI_SCI_CAPTION KEYTHE SCIENCE, `in the flesh'. SCI_SUF
 SCI_SCI_CAPTION KEYTHE SCIENCE, red in tooth and claw. SCI_SUF
 SCI_SCI_CAPTION KEYTHE SCIENCE, SCI_VERBING the PREFIX-EXP_ADJ EVAL_MEASUREMENT_UM. SCI_SUF
 SCI_SCI_CAPTION KEYTHE SCI_PERSONs' research, motivated to SCI_TRY, for \textit{you}. SCI_SUF
@@ -8717,7 +8736,7 @@ PROOFENDER+15 ; CONNECT SOSEEM, SCI_PROVE_VERBING that SCI_OVERALL_THESIS_PROVE 
 PROOFENDER+15 ; CONNECT SOSEEM, SCI_PROVE_VERBING that SCI_OVERALL_THESIS_PROVE represents the CRUX 
 PROOFENDER+15 . LIT_ALTHOUGH similar SCI_GOAL_PL have been NOTED for their IMPACT AREA, we SCI_SOLVE_CLAUSE without OVERVERBING MATHNOUNS 
 PROOFENDER , LIT_ALTHOUGH a similar SCI_MODEL_TYPE CITATION SCI_CAN EVAL_WHY_VERB MATHNOUNS 
-PROOFENDER+15 LIT_ALTHOUGH RELATED solutions to this SCI_PROBLEM are LIT_GOOD, none has taken the EXP_ADJ SCI_APPROACH we propose here
+PROOFENDER+15 . LIT_ALTHOUGH RELATED solutions to this SCI_PROBLEM are LIT_GOOD, none has taken the EXP_ADJ SCI_APPROACH we propose here
 PROOFENDER+15 , which PROVES that AREAADJ MNOUNS are PROPPHRASE
 PROOFENDER+15 ; we will now attempt to PROVE_THAT AREA is MORE_IMPORTANT_THAN MNOUNS in MAXIMIZING the SPACE CONSTRAINT_TYPE
 PROOFENDER+15 . We now SCI_AIM to PROBE_VERB whether EXP_ADJ CONSTRAINT_TYPE is as AMBITIOUS as PEOPLE_SAY
