--- a/corprules.in
+++ b/corprules.in
@@ -8666,7 +8666,17 @@ CLEARLY clearly
 CLEARLY obviously
 CLEARLY trivially
 CLEARLY nevertheless
-CLEARLY 
+CLEARLY surely
+CLEARLY	definitely
+CLEARLY undoubtedly
+CLEARLY seemingly
+CLEARLY undeniably
+CLEARLY evidently
+CLEARLY apparently
+CLEARLY plainly
+CLEARLY	nonetheless
+CLEARLY	at any rate
+
 
 BIGTHEOREM+15 the general theory
 BIGTHEOREM+15 FAMOUSPOS theorem
