--- a/corprules.in
+++ b/corprules.in
@@ -2829,18 +2829,15 @@ EXP_WHOSE	the Learniversity's
 EXP_WHOSE	our Institute's
 EXP_WHOSE	the University's
 EXP_WHOSE	our University's
-EXP_WHOSE	Adelaide University's 
 EXP_WHOSE	the
+EXP_WHOSE	the family
+EXP_WHOSE	Snickers University's
 EXP_WHOSE+20	our
 EXP_WHOSE	Harvard University's
 EXP_WHOSE	Oxford University's
 EXP_WHOSE	Cambridge University's
 EXP_WHOSE	Princeton University's
 EXP_WHOSE	Yale University's
-EXP_WHOSE	Monash University's
-EXP_WHOSE	UNSW's
-EXP_WHOSE	Macquarie University's
-EXP_WHOSE	RMIT's
 EXP_WHOSE	FAMOUSLAST University's
 EXP_WHOSE	FermiLab's
 EXP_WHOSE	FAMOUSLAST Laboratory's
