--- a/corprules.in
+++ b/corprules.in
@@ -5886,6 +5886,7 @@ FUNNEND , thus forcing FAMOUSLAST Labs to eat humble pie; in your face, losers
 HEROIC_OVERSTATEMENT FUNPRE some of us are more evolved than others
 HEROIC_OVERSTATEMENT I like speling. It makes me feel big
 HEROIC_OVERSTATEMENT We have drunk our wine and our milk
+HEROIC_OVERSTATEMENT Excuse us, but I think we know what we're doing
 
 PETTY_SUF+20 
 PETTY_SUF . Did you know that he even acts inappropriately in social situations? (What kind of loser does that?) But anyway
