--- a/corprules.in
+++ b/corprules.in
@@ -9303,11 +9303,11 @@ COMPMID_ liber
 COMPMID_ man
 COMPMID_ fem
 COMPMID_ mic
-COMPMID_ philo
+COMPMID_ philoLOWRC
 COMPMID_ phag
 COMPMID_+3 LOWRCLOWRVLOWRC
-COMPMID_+3 LOWRVLOWRC
-COMPMID_+2 LOWRVLOWRCLOWRVLOWRC
+#COMPMID_+3 LOWRVLOWRC
+#COMPMID_+2 LOWRVLOWRCLOWRVLOWRC
 COMPMID_ LOWRCLOWRVLOWRCLOWRC
 
 LOWRV+2 a
