--- a/corprules.in
+++ b/corprules.in
@@ -2347,7 +2347,11 @@ BAD+30 BAD_NV
 BAD+30 BAD_V
 BAD+30 DIFFERENT
 #BAD \textit{BAD}
-
+BAD_NV			boring
+BAD_NV			crackpot
+BAD_NV			wacky
+BAD_NV			wack-job
+BAD_NV			nutjob
 BAD_V+20		incompatible
 BAD_V+20		inconvenient
 BAD_NV			good
