--- a/corprules.in
+++ b/corprules.in
@@ -5121,6 +5121,7 @@ SCI_ADJ_NV+5	technical
 SCI_ADJ_NV+5	structured
 SCI_ADJ_NV+5	natural
 SCI_ADJ_V+5	essential
+SCI_ADJ_V+5	engaging
 SCI_ADJ_V+5	intuitive
 SCI_ADJ_NV+10 practical
 SCI_ADJ_NV+5 compelling
