--- a/corprules.in
+++ b/corprules.in
@@ -5212,6 +5212,15 @@ LIT_REVERSAL+10 LREV
 LIT_REVERSAL+5 somewhat LREV
 LIT_REVERSAL+5 MORE LREV
 LIT_REVERSAL+5 perhaps MOST LREV
+LIT_REVERSAL to be critical
+LIT_REVERSAL though it does not behove us to do so
+LIT_REVERSAL despite this
+LIT_REVERSAL be that as it may
+LIT_REVERSAL in another light
+LIT_REVERSAL to put it another way
+LIT_REVERSAL more explicitly
+LIT_REVERSAL for example
+LIT_REVERSAL more clearly
 LREV+10	interestingly
 LREV+10	importantly
 LREV+10	surprisingly
