--- a/corprules.in
+++ b/corprules.in
@@ -2386,6 +2386,7 @@ BAD_V			untoward
 BAD_V			unflattering
 BAD_V			uninspired
 BAD_V			awkward
+BAD_V			interminable
 BAD_NV			discreditable
 BAD_NV			clumsy
 BAD_NV			gauche
